# Rakkr

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mise.toml  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Cargo.toml  Dockerfile.api  Dockerfile.web  GAPS.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: launch.json
crates/recorder-agent/: Cargo.toml  README.md  VERSION
crates/recorder-agent/src/: agent_recovery.rs  alsa_device.rs  bootstrap.rs  cache_content_type.rs  capture.rs  capture_naming.rs  channel_map.rs  chunked_capture.rs  command_template.rs  config.rs  controller.rs  controller_http.rs  enhance.rs  enhanced_render.rs  health_log.rs  inventory.rs  main.rs  meter_command.rs  meter_health.rs  monitor_sync.rs  node_config.rs  recorder_cache_retention.rs  recording_job_chunked.rs  recording_job_disk.rs  recording_job_recovery.rs  recording_job_recovery_chunk_total.rs  recording_job_segments.rs  recording_job_upload.rs  state.rs  system_health.rs  telemetry.rs  version.rs
crates/recorder-agent/src/capture/: tests.rs
crates/recorder-agent/src/channel_map/: tests.rs
crates/recorder-agent/src/controller/: cache_upload.rs  capture_group.rs  job_runner.rs  tests.rs  types.rs
crates/recorder-agent/src/inventory/: alsa.rs  net.rs  runtime.rs
crates/recorder-agent/src/main/: health_tick.rs  tests.rs
crates/recorder-agent/src/recording_job_chunked/: tests.rs
crates/recorder-agent/src/recording_job_recovery/: chunked.rs  tests.rs
crates/recorder-agent/src/telemetry/: correlation.rs  tests.rs
docs/: RAKKR_SOURCE_OF_TRUTH.md  index.md
scripts/: agent-alsa-health-smoke.sh  agent-alsa-job-smoke.sh  agent-alsa-meter-smoke.sh  agent-fake-controller-smoke-agent.mjs  agent-fake-controller-smoke-assertions.mjs  agent-fake-controller-smoke-controller.mjs  agent-fake-controller-smoke-devices.mjs  agent-fake-controller-smoke-health-meters.mjs  agent-fake-controller-smoke-health-system.mjs  agent-fake-controller-smoke.mjs  (+38 more)
(+685 files in other folders)
